/*
 * $Id: ChangeLog,v 1.3558 2004/10/28 22:43:50 ronpinkas Exp $
 */

/* Use this format for the entry headers:
   YYYY-MM-DD HH:MM UTC[-|+]hhmm Your Full Name <your_email@address>
   For example:
   2002-12-01 23:12 UTC+0100 Foo Bar <foo.bar@foobar.org>
*/

2004-10-28 18:28 UTC-0800 Ron Pinkas <ron at xharbour.com>
  * include/hbexprb.c
  * source/compiler/exproptb.c
    * Reset hb_comp_iVarScope to VS_PARAMETER in hb_compExprUseCodeblock() before calling hb_compVariableAdd()

  * source/compiler/harbour.c
    * Minor formatting, and comment.

  * tests/speedtst.prg
    * Corrected #define of ASSOC_ARRAY to Hash() for __XHARBOUR__

2004-10-28 03:42 UTC-0800 Ron Pinkas <ron at xharbour.com>
  * source/compiler/harbour.c
    * Corrected condintion in new error related to static declaration in Extended Codeblocks.

2004-10-28 10:00 UTC-0500 Paul Tucker <ptucker@sympatico.ca>
  * include/gtinfo.ch
  * source/rtl/maxrow.c
    * new params for MaxRow(<x>) <x> is logic, or one of:
    + GTI_WINDOW  /* default: the window if active, otherwise, the screen */
    + GTI_SCREEN  /* (or logic .t.)  Screen Rows when a window is active */
    + GTI_CLIENT  /* Future use - the client area of a window */
    + GTI_MAX     /* Currently for GTWin only: Returns the max possible
                     dimension that will fit on the current screen. For
                     unsuported GT's, param will return -1.  This will
                     still work in a call to SetMode() for example. */

2004-10-28 15:00 UTC+0700 Budyanto Dj. <budyanto@centrin.net.id>
  + contrib/gtwvw/samples
  + contrib/gtwvw/samples/bldwvw.bat
  + contrib/gtwvw/samples/inpfocus.prg
  + contrib/gtwvw/samples/maincoor.prg
  + contrib/gtwvw/samples/prog0.prg
  + contrib/gtwvw/samples/prog1.prg
  + contrib/gtwvw/samples/prog2.prg
  + contrib/gtwvw/samples/readme.txt
  + contrib/gtwvw/samples/winapi.c
  + contrib/gtwvw/samples/wvt2wvw.ch
  + contrib/gtwvw/samples/wvwmouse.prg
  + contrib/gtwvw/samples/wvwtest9.bat