@@ -1,5 +1,5 @@
 /*
- * $Id: ChangeLog,v 1.3558 2004/10/28 22:43:50 ronpinkas Exp $
+ * $Id: ChangeLog,v 1.3559 2004/10/29 01:28:54 ronpinkas Exp $
  */
 
 /* Use this format for the entry headers:
@@ -7,6 +7,10 @@
    For example:
    2002-12-01 23:12 UTC+0100 Foo Bar <foo.bar@foobar.org>
 */
+
+2004-10-30 11:10 UTC-0500 Paul Tucker <ptucker@sympatico.ca>
+  * source/rtl/maxrow.c
+    * reordered switch
 
 2004-10-28 18:28 UTC-0800 Ron Pinkas <ron at xharbour.com>
   * include/hbexprb.c
